# SIR_Model

./: CMakeLists.txt  README.md  main.cpp  performance.md  s1performance.txt  s2performance.txt
include/: Community.h  Coordinate.h  Person.h  Point.h  output.h
src/: CMakeLists.txt  Community.cpp  Community.h  Coordinate.cpp  Coordinate.h  Output.cpp  Output.h  Person.cpp  Person.h  Point.cpp  Point.h  main.cpp  output.cpp
